force-app/main/default/objects/Opportunity/fields/HealthCloudGA__Specialty__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Specialty__c</fullName>
    <description>Specialty associated with the referral.</description>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Neurosurgery</fullName>
            </value>
            <value>
                <fullName>Family Practice</fullName>
            </value>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>