force-app/main/default/objects/Opportunity/fields/Referral_Stage__c.field-meta.xml
<CustomField>
    <fullName>Referral_Stage__c</fullName>
    <label>Referral Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Review</fullName>
            </value>
            <value>
                <fullName>Pre-Authorization</fullName>
            </value>
            <value>
                <fullName>Financial Clearance</fullName>
            </value>
            <value>
                <fullName>Consent Documentation</fullName>
            </value>
            <value>
                <fullName>Appointment Booking</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>