force-app/main/default/objects/Opportunity/listViews/Working_Referrals.listView-meta.xml
<ListView>
    <fullName>Working_Referrals</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>HealthCloudGA__Specialty__c</columns>
    <columns>HealthCloudGA__Priority__c</columns>
    <columns>HealthCloudGA__ReferringPractitioner__c</columns>
    <columns>HealthCloudGA__ReferringOrganization__c</columns>
    <columns>HealthCloudGA__ReferredToOrganization__c</columns>
    <columns>HealthCloudGA__ReferredToPractitioner__c</columns>
    <columns>Referral_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.HealthCloudGA__Patient_Referral</value>
    </filters>
    <filters>
        <field>Referral_Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Working Referrals</label>
</ListView>